--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,11 +5,11 @@ phases:
     runtime-versions:
       nodejs: latest
     commands:
-      - echo "Installing Bun runtime..."
       - curl -fsSL https://bun.sh/install | bash
       - export BUN_INSTALL="$HOME/.bun"
       - export PATH="$BUN_INSTALL/bin:$PATH"
       - echo "Bun version:" && bun --version
+      - cd client && bun install && cd ..
 
   pre_build:
     commands:
