--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,7 +12,7 @@ phases:
 
   build:
     commands:
-      - echo "Building Svelte client..."
+      - echo "Building client..."
       - cd client
       - bun run build
       - cd ..
